adiçao orgnizador de ficheiiros

--- a/Frontend/Dashboard/html/dashboard copy.html
+++ b/Frontend/Dashboard/html/dashboard copy.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard - XYZ Labs</title>
+  <link rel="stylesheet" href="../css/image-order-manager.css">
+<script src="../scripts/image-order-manager.js"></script>
   <link rel="stylesheet" href="../css/base.css">
 <link rel="stylesheet" href="../css/layout.css">
 <link rel="stylesheet" href="../css/dashboard.css">
@@ -20,7 +22,7 @@
     <h2>Admin</h2>
     <button data-tab="users">Utilizadores</button>
     <button data-tab="products">Produtos</button>
-    <button data-tab="attributes">Atributos</button>
+    
     <button id="logoutBtn">Logout</button>
   </aside>
 
@@ -92,111 +94,6 @@
     </div>
   </div>
 </section>
-<section id="attributes" class="tab hidden">
-  <h2>Gestão de Atributos</h2>
-  
-  <p style="margin-bottom: 20px; color: #666;">
-    Define atributos personalizados para cada subcategoria. 
-    Exemplo: Toyota → {Ano, Modelo, Parte do Carro}
-  </p>
-
-  <div class="form-group">
-    <label>Seleciona a Subcategoria</label>
-    <select id="attributeSubcategorySelect" class="form-control">
-      <option value="">-- Seleciona Subcategoria --</option>
-    </select>
-  </div>
-
-  <button id="addAttributeBtn" class="primary-btn" disabled style="margin-bottom: 20px;">
-    + Novo Atributo
-  </button>
-
-  <div id="attributesContainer">
-    <p style="color:#666;padding:20px;text-align:center;">
-      Seleciona uma subcategoria para ver e gerir os atributos
-    </p>
-  </div>
-</section>
-
-
-<div id="attributeModal" class="modal hidden">
-  <div class="modal-content">
-    <span class="close" data-close="attribute">&times;</span>
-    <h3 id="attributeModalTitle">Novo Atributo</h3>
-
-    <form id="attributeForm">
-      <input type="hidden" id="attributeId">
-
-      <div class="form-group">
-        <label>Nome do Atributo *</label>
-        <input 
-          type="text" 
-          id="attributeName" 
-          required 
-          placeholder="Ex: Ano, Marca, Modelo, Parte do Carro"
-        >
-        <small style="color:#666;">Nome do campo que será exibido no formulário</small>
-      </div>
-
-      <div class="form-group">
-        <label>Tipo de Campo *</label>
-        <select id="attributeType" required>
-          <option value="text">Texto Livre</option>
-          <option value="number">Número</option>
-          <option value="select">Lista (Seleção Única)</option>
-          <option value="multiselect">Múltipla Seleção</option>
-        </select>
-        <small style="color:#666;">Tipo de input que será usado</small>
-      </div>
-
-      <div id="optionsContainer" class="form-group" style="display:none;">
-        <label>Opções (uma por linha)</label>
-        <textarea 
-          id="attributeOptions" 
-          rows="6" 
-          placeholder="2020
-2021
-2022
-2023
-2024"
-        ></textarea>
-        <small style="color:#666;">
-          Digite uma opção por linha. Só necessário para "Lista" ou "Múltipla Seleção".
-        </small>
-      </div>
-
-      <div class="form-group">
-        <label style="display:flex;align-items:center;">
-          <input type="checkbox" id="attributeRequired" style="width:auto;margin-right:10px;">
-          <span>Campo obrigatório</span>
-        </label>
-      </div>
-
-      <div class="form-group">
-        <label>Ordem de Exibição</label>
-        <input 
-          type="number" 
-          id="displayOrder" 
-          value="0" 
-          min="0"
-          placeholder="0"
-        >
-        <small style="color:#666;">
-          Ordem em que o atributo aparece no formulário (0 = primeiro)
-        </small>
-      </div>
-
-      <div class="modal-actions" style="margin-top:20px;">
-        <button type="submit" class="primary-btn">
-          💾 Guardar Atributo
-        </button>
-      </div>
-    </form>
-  </div>
-</div>
-<div id="dynamicAttributesContainer" style="border-top:2px solid #e5e7eb;padding-top:20px;margin-top:20px;">
-  <!-- Os atributos dinâmicos aparecerão aqui automaticamente -->
-</div>
 <!-- ============ MODAL: CRIAR UTILIZADOR ============ -->
 <div id="createUserModal" class="modal hidden">
   <div class="modal-content">
@@ -334,6 +231,7 @@
 </div>
 
  <!-- ABA DE PRODUTOS -->
+<!-- ABA DE PRODUTOS - VERSÃO ATUALIZADA COM SELEÇÃO MÚLTIPLA -->
 <section id="products" class="tab hidden">
   <h2>Gestão de Produtos</h2>
 
@@ -350,32 +248,64 @@
       <option value="true">Ativos</option>
       <option value="false">Inativos</option>
     </select>
+    
+    <input type="number" id="priceMin" placeholder="Preço min €" />
+    <input type="number" id="priceMax" placeholder="Preço max €" />
+
+    <select id="productFilterStock">
+      <option value="">Stock (Todos)</option>
+      <option value="true">Disponível</option>
+      <option value="false">Indisponível</option>
+    </select>
+
+    <input
+      type="text"
+      id="productFilterCategory"
+      placeholder="Filtrar por categoria..."
+    />
+
+    <input
+      type="text"
+      id="productFilterPrimaryCategory"
+      placeholder="Categoria principal..."
+    />
 
     <button id="addProductBtn" class="primary-btn">
       + Novo Produto
     </button>
   </div>
 
-  <!-- LISTA / TABELA -->
+  <!-- BARRA DE AÇÕES EM LOTE -->
+  <div class="bulk-actions-bar">
+    <div class="bulk-actions-left">
+      <label class="select-all-container">
+        <input type="checkbox" id="selectAllProducts">
+        <span>Selecionar todos</span>
+      </label>
+      <span id="selectionCount" class="selection-count"></span>
+    </div>
+    <div class="bulk-actions-right">
+      <button id="deleteSelectedBtn" class="danger-btn" disabled>
+        🗑️ Eliminar Selecionados
+      </button>
+    </div>
+  </div>
+
+  <!-- TABELA DE PRODUTOS -->
   <div class="products-table">
     <div class="table-header">
+      <span class="header-select"></span>
       <span>Nome</span>
       <span>Preço</span>
       <span>Stock</span>
+      <span>Categorias</span>
       <span>Estado</span>
       <span>Ações</span>
     </div>
 
     <div id="productsList" class="table-body">
-      <!-- produtos renderizados via JS -->
+      <!-- Produtos inseridos via JavaScript -->
     </div>
-  </div>
-
-  <!-- PAGINAÇÃO -->
-  <div class="pagination">
-    <button id="prevPage">←</button>
-    <span id="currentPage">1</span>
-    <button id="nextPage">→</button>
   </div>
 </section>
 
@@ -401,20 +331,26 @@
         <label>Descrição</label>
         <textarea id="createDescription" rows="4" required></textarea>
       </div>
+<div class="form-group">
+  <label>Categorias *</label>
+  <div id="categoriesCheckboxes" class="categories-checkbox-container">
+    <!-- Categorias carregadas via JS -->
+  </div>
+  <small style="color:#666;font-size:12px;margin-top:5px;display:block;">
+    Seleciona todas as categorias a que este produto pertence
+  </small>
+</div>
 
-        <div class="form-group">
-        <label>Categoria</label>
-        <select id="createCategory">
-            <option value="">-- Seleciona categoria --</option>
-        </select>
-        </div>
-
-        <div class="form-group">
-        <label>Subcategoria</label>
-        <select id="createSubcategory">
-            <option value="">-- Seleciona subcategoria --</option>
-        </select>
-        </div>
+<!-- CATEGORIA PRINCIPAL -->
+<div class="form-group">
+  <label>Categoria Principal *</label>
+  <select id="primaryCategory" disabled>
+    <option value="">-- Categoria Principal --</option>
+  </select>
+  <small style="color:#666;font-size:12px;margin-top:5px;display:block;">
+    Escolhe qual a categoria principal para breadcrumbs e navegação
+  </small>
+</div>
 
 
 
@@ -469,10 +405,7 @@
       <div id="tab-edit-details" class="modal-tab-content active">
         <form id="editProductForm">
           <input type="hidden" id="editId">
-<!-- Na aba tab-edit-details, adicionar antes dos botões: -->
-<div id="dynamicAttributesEdit" style="border-top:2px solid #e5e7eb;padding-top:20px;margin-top:20px;">
-  <!-- Atributos dinâmicos aparecerão aqui -->
-</div>
+
           <div class="form-row">
             <div class="form-group">
               <label>Nome *</label>
@@ -490,21 +423,26 @@
             <textarea id="editDescription" rows="4" required></textarea>
           </div>
 
-          <div class="form-row">
-            <div class="form-group">
-              <label>Categoria</label>
-              <select id="editCategory" data-category-select>
-                <option value="">-- Seleciona categoria --</option>
-              </select>
-            </div>
+       <div class="form-group">
+  <label>Categorias *</label>
+  <div id="categoriesCheckboxes" class="categories-checkbox-container">
+    <!-- Categorias carregadas via JS -->
+  </div>
+  <small style="color:#666;font-size:12px;margin-top:5px;display:block;">
+    Seleciona todas as categorias a que este produto pertence
+  </small>
+</div>
 
-            <div class="form-group">
-              <label>Subcategoria</label>
-              <select id="editSubcategory" data-subcat-select data-for-category="editCategory">
-                <option value="">-- Seleciona subcategoria --</option>
-              </select>
-            </div>
-          </div>
+<!-- CATEGORIA PRINCIPAL -->
+<div class="form-group">
+  <label>Categoria Principal *</label>
+  <select id="primaryCategory" disabled>
+    <option value="">-- Categoria Principal --</option>
+  </select>
+  <small style="color:#666;font-size:12px;margin-top:5px;display:block;">
+    Escolhe qual a categoria principal para breadcrumbs e navegação
+  </small>
+</div>
 
           <div class="form-group">
   <label>Stock Disponível</label>
@@ -707,10 +645,9 @@
   <script src="../scripts/users.js"></script>
   <script src="../scripts/products.js"></script>
   <script src="../scripts/categories.js"></script>
-  <script src="../scripts/subcategories.js"></script>
+ 
   <script src="../scripts/createproduct.js"></script>
   <script src="../scripts/editproduct.js"></script>
-    <script src="../scripts/viewproduct.js"></script>
-    <script src="../scripts/attributes-manager.js"></script>
+  <script src="../scripts/viewproduct.js"></script>
 </body>
 </html>
