--- a/Frontend/Dashboard/html/dashboard.html
+++ b/Frontend/Dashboard/html/dashboard.html
@@ -29,8 +29,204 @@
     <!-- SECÇÃO DE UTILIZADORES -->
     <section id="users" class="tab hidden">
       <h2>Gestão de Utilizadores</h2>
-      <!-- ... conteúdo omitido por brevidade ... -->
+
+      <!-- ESTATÍSTICAS -->
+      <div class="stats-container">
+        <div class="stat-card">
+          <div class="stat-icon">👥</div>
+          <div class="stat-info">
+            <span class="stat-label">Total</span>
+            <span class="stat-value" id="totalUsers">0</span>
+          </div>
+        </div>
+
+        <div class="stat-card">
+          <div class="stat-icon">👑</div>
+          <div class="stat-info">
+            <span class="stat-label">Admins</span>
+            <span class="stat-value" id="totalAdmins">0</span>
+          </div>
+        </div>
+
+        <div class="stat-card">
+          <div class="stat-icon">📅</div>
+          <div class="stat-info">
+            <span class="stat-label">Novos (30d)</span>
+            <span class="stat-value" id="newUsers">0</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- FILTROS + AÇÕES -->
+      <div class="users-toolbar">
+        <input
+          type="text"
+          id="userSearch"
+          placeholder="Pesquisar por nome ou email..."
+        />
+
+        <select id="userFilterRole">
+          <option value="">Todas as Roles</option>
+          <option value="admin">Admin</option>
+          <option value="user">User</option>
+        </select>
+
+        <button id="addUserBtn" class="primary-btn">
+          + Novo Utilizador
+        </button>
+      </div>
+
+      <!-- TABELA DE UTILIZADORES -->
+      <div class="users-table">
+        <div class="table-header">
+          <span>Nome</span>
+          <span>Email</span>
+          <span>Role</span>
+          <span>Data Registo</span>
+          <span>Ações</span>
+        </div>
+
+        <div id="usersList" class="table-body">
+          <!-- Utilizadores inseridos via JavaScript -->
+        </div>
+      </div>
     </section>
+
+    <!-- ============ MODAL: CRIAR UTILIZADOR ============ -->
+    <div id="createUserModal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close" data-close="createUser">&times;</span>
+
+        <h3>Criar Novo Utilizador</h3>
+
+        <form id="createUserForm">
+          <div class="form-group">
+            <label>Nome *</label>
+            <input type="text" id="createUserName" required>
+          </div>
+
+          <div class="form-group">
+            <label>Email *</label>
+            <input type="email" id="createUserEmail" required>
+          </div>
+
+          <div class="form-group">
+            <label>Password *</label>
+            <input type="password" id="createUserPassword" required>
+            <ul class="password-reqs">
+              <li id="createLengthReq">≥ 12 caracteres</li>
+              <li id="createUppercaseReq">Uma letra maiúscula</li>
+              <li id="createLowercaseReq">Uma letra minúscula</li>
+              <li id="createNumberReq">Um número</li>
+              <li id="createSpecialReq">Um carácter especial</li>
+            </ul>
+          </div>
+
+          <div class="form-group">
+            <label>Role *</label>
+            <select id="createUserRole" required>
+              <option value="user">User</option>
+              <option value="admin">Admin</option>
+            </select>
+          </div>
+
+          <button type="submit" class="primary-btn">
+            Criar Utilizador
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- ============ MODAL: VER DETALHES ============ -->
+    <div id="viewUserModal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close" data-close="viewUser">&times;</span>
+
+        <h3>Detalhes do Utilizador</h3>
+
+        <div class="user-details">
+          <div class="detail-row">
+            <span class="detail-label">Nome:</span>
+            <span class="detail-value" id="viewUserName"></span>
+          </div>
+
+          <div class="detail-row">
+            <span class="detail-label">Email:</span>
+            <span class="detail-value" id="viewUserEmail"></span>
+          </div>
+
+          <div class="detail-row">
+            <span class="detail-label">Role:</span>
+            <span class="detail-value">
+              <span id="viewUserRole" class="role-badge"></span>
+            </span>
+          </div>
+
+          <div class="detail-row">
+            <span class="detail-label">Registado em:</span>
+            <span class="detail-value" id="viewUserCreated"></span>
+          </div>
+        </div>
+
+        <div class="modal-actions">
+          <button id="editUserFromViewBtn" class="primary-btn">
+            ✏️ Editar
+          </button>
+          <button id="deleteUserFromViewBtn" class="danger-btn">
+            🗑️ Eliminar
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ============ MODAL: EDITAR UTILIZADOR ============ -->
+    <div id="editUserModal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close" data-close="editUser">&times;</span>
+
+        <h3>Editar Utilizador</h3>
+
+        <form id="editUserForm">
+          <input type="hidden" id="editUserId">
+
+          <div class="form-group">
+            <label>Nome *</label>
+            <input type="text" id="editUserName" required>
+          </div>
+
+          <div class="form-group">
+            <label>Email *</label>
+            <input type="email" id="editUserEmail" required>
+          </div>
+
+          <div class="form-group">
+            <label>Role *</label>
+            <select id="editUserRole" required>
+              <option value="user">User</option>
+              <option value="admin">Admin</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label>Nova Password (deixar vazio para não alterar)</label>
+            <input type="password" id="editUserPassword" placeholder="********">
+            <ul class="password-reqs">
+              <li id="editLengthReq">≥ 12 caracteres</li>
+              <li id="editUppercaseReq">Uma letra maiúscula</li>
+              <li id="editLowercaseReq">Uma letra minúscula</li>
+              <li id="editNumberReq">Um número</li>
+              <li id="editSpecialReq">Um carácter especial</li>
+            </ul>
+          </div>
+
+          <div class="modal-actions">
+            <button type="submit" class="primary-btn">
+              💾 Guardar Alterações
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
 
     <!-- SECÇÃO DE PRODUTOS -->
     <section id="products" class="tab hidden">
@@ -210,7 +406,7 @@
       </div>
     </div>
 
-    <!-- ✅ MODAL: VER PRODUTO (COMPLETO) -->
+    <!-- MODAL: VER PRODUTO -->
     <div id="viewProductModal" class="modal hidden">
       <div class="modal-content modal-large">
         <span class="close" data-close="view">&times;</span>
