--- a/Frontend/PaginaFrontal/html/Checkout.html
+++ b/Frontend/PaginaFrontal/html/Checkout.html
@@ -265,7 +265,7 @@
     </div>
   </div>
 </footer>
-
+<script src="../scripts/header.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/checkout.js"></script>
 <script src="../scripts/homePage.js"></script>
