--- a/Frontend/PaginaFrontal/html/Privacy.html
+++ b/Frontend/PaginaFrontal/html/Privacy.html
@@ -456,7 +456,7 @@
     </div>
   </div>
 </footer>
-
+<script src="../scripts/header.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/homePage.js"></script>
 
