--- a/Frontend/PaginaFrontal/html/about.html
+++ b/Frontend/PaginaFrontal/html/about.html
@@ -299,7 +299,7 @@
     </div>
   </div>
 </footer>
-
+<script src="../scripts/header.js"></script>
 <script src="../scripts/homePage.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/homepage-products.js"></script>
