--- a/Frontend/PaginaFrontal/html/contact.html
+++ b/Frontend/PaginaFrontal/html/contact.html
@@ -327,6 +327,7 @@
     </div>
   </div>
 </footer>
+<script src="../scripts/header.js"></script>
 <script src="../scripts/homePage.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/contact.js"></script>
