--- a/Frontend/PaginaFrontal/html/materials.html
+++ b/Frontend/PaginaFrontal/html/materials.html
@@ -223,7 +223,7 @@
     </div>
   </div>
 </footer>
-
+<script src="../scripts/header.js"></script>
 <script src="../scripts/homePage.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/materials.js"></script>
