--- a/Frontend/PaginaFrontal/html/product-details.html
+++ b/Frontend/PaginaFrontal/html/product-details.html
@@ -371,7 +371,7 @@
     </div>
   </div>
 </footer>
-
+<script src="../scripts/header.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/homePage.js"></script>
 <script src="../scripts/product-details.js"></script>
