--- a/Frontend/PaginaFrontal/html/products.html
+++ b/Frontend/PaginaFrontal/html/products.html
@@ -224,6 +224,7 @@
     </div>
   </div>
 </footer>
+<script src="../scripts/header.js"></script>
 <script src="../scripts/cart.js"></script>
 <script src="../scripts/homePage.js"></script>
 <script src="../scripts/products-page.js"></script>
